11/1/15 Version 1.2.0:
* f31a986 fix:fix 404 test to reference 404 handler
* 7dacdd8 fix 404.html to reference cart_help.html, rather than rather than redcross_help.html
* d48c2b2 really add template vars for adminName, adminEmail this time!
* 220891f add admin and version template vars to render contexts, also remove unused vars and replace unused tuple var returns
* c7f02b7 add template vars for adminName, adminEmail, siteVersion, imsVersion
* bf3c32d add settings for VERSION, SITE_VERSION, and SERVER_EMAIL
* 4e98a31 feat:add VERSION so we have a single source of version information
10/11/2015 Version 1.3.0:
* 394d155 (HEAD, master) add date and comments to version
12/11/2015 Version 1.3.1:
* 8185ea0 (HEAD, master) add help on product code explanation and generation
15/11/2015 Version 1.3.2:
* de84895 (HEAD, master) add PRODUCT_INFORMATION_FORM_ADDED_FIELDS to settings
21/11/2015 Version 1.3.3:
* d2cde81 (HEAD, master) add TEMP_DIR setting
26/12/2015 Version 1.4.0:
NOTE!! Messed up git commit of v1.5.0.  Most of it ended up --amend'ed to v1.4.0.
* 9fe56c3 (HEAD, tag: v1.4.0, pagination, master) feat: Update for paging and small style updates.
28/12/2015 Version 1.5.0:
*   bf5d870 (HEAD, master) Updated to Django1.9 from 1.7
29/12/2015 Version 1.5.1:
* fb9e4dd (HEAD, master) Add DEFAULT_FROM_EMAIL to settings. Add Forgot Password link to login form.
* 55a52c1 (origin/master) fix: Add session messages to registration views/templates
* ab3c960 feat: Add password management features
01/19/2016 Version 1.5.2:
* 169bddd (HEAD, master) fix: Issue with logging out for non-admin users
01/21/2016 Version 1.5.3:
* d4cacd3 (HEAD, master) feat: Remove display of warehouse location from product information