@@ -9,13 +9,6 @@
                         class="nav-1-unselected"
                     {% endif %}
                     href="/">Home</a></li>
-                <li>
-                    <a {% if nav_rims %}
-                        class="nav-1-selected"
-                    {% else %}
-                        class="nav-1-unselected"
-                    {% endif %}
-                    href="/ims">CIMS</a></li>
                 <li><a {% if nav_sites %}
                         class="nav-1-selected"
                     {% else %}
